--- a/.gitignore
+++ b/.gitignore
@@ -137,4 +137,7 @@ xcuserdata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+### Secret ###
+*.xcconfig
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,swift,swiftpackagemanager,xcode
