feat: API 설정 및 로거 추가
- xcconfig 기반 API Key 관리
- OSLog 로깅 시스템 구현
- APIConfig enum 구조 설계

--- a/CurtainCall/Application/Info.plist
+++ b/CurtainCall/Application/Info.plist
@@ -7,6 +7,10 @@
         <string>NanumSquareB.ttf</string>
         <string>NanumSquareR.ttf</string>
     </array>
+    <key>KOPIS_API_KEY</key>
+    <string>$(KOPIS_API_KEY)</string>
+    <key>KOPIS_BASE_URL</key>
+    <string>$(KOPIS_BASE_URL)</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
