--- a/CurtainCall/Application/Info.plist
+++ b/CurtainCall/Application/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleVersion</key>
+	<string>3</string>
 	<key>KOPIS_API_KEY</key>
 	<string>$(KOPIS_API_KEY)</string>
 	<key>KOPIS_BASE_URL</key>
