--- a/CurtainCall/Application/Info.plist
+++ b/CurtainCall/Application/Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.curtaincall.deeplink</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>curtaincall</string>
+			</array>
+		</dict>
+	</array>
 	<key>KOPIS_API_KEY</key>
 	<string>$(KOPIS_API_KEY)</string>
 	<key>KOPIS_BASE_URL</key>
