feat: Add CI/CD pipeline with Fastlane - Add Fastlane configuration (test, build, beta, release lanes) - Add GitHub Actions CI workflow for automated testing - Add GitHub Actions CD workflow for TestFlight deployment

--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,16 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+fastlane/README.md
+
+# Bundler
+Gemfile.lock
+vendor/bundle/
+
+# Build artifacts
+build/
+*.ipa
+test_output/
 
 # Code Injection
 # After new code Injection tools there's a generated folder /iOSInjectionProject
