--- a/.github/workflows/deploy-testflight.yml
+++ b/.github/workflows/deploy-testflight.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   deploy:
     name: Build and Deploy to TestFlight
-    runs-on: macos-14
+    runs-on: macos-26-arm64
     timeout-minutes: 60
 
     steps:
@@ -24,7 +24,7 @@ jobs:
           fetch-depth: 0
 
       - name: Select Xcode version
-        run: sudo xcode-select -s /Applications/Xcode_15.2.app/Contents/Developer
+        run: sudo xcode-select -s /Applications/Xcode_26.1.app/Contents/Developer
 
       - name: Show Xcode version
         run: xcodebuild -version
