--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,16 +14,16 @@ on:
 jobs:
   build-and-test:
     name: Build and Test
-    runs-on: macos-26-arm64
+    runs-on: macos-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Select Xcode version
-        run: sudo xcode-select -s /Applications/Xcode_26.1.app/Contents/Developer
+      - name: Show available Xcode versions
+        run: ls /Applications | grep Xcode
 
-      - name: Show Xcode version
+      - name: Show default Xcode version
         run: xcodebuild -version
 
       - name: Cache Ruby gems
