--- a/.github/workflows/deploy-testflight.yml
+++ b/.github/workflows/deploy-testflight.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   deploy:
     name: Build and Deploy to TestFlight
-    runs-on: macos-26-arm64
+    runs-on: macos-latest
     timeout-minutes: 60
 
     steps:
@@ -23,10 +23,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Select Xcode version
-        run: sudo xcode-select -s /Applications/Xcode_26.1.app/Contents/Developer
+      - name: Show available Xcode versions
+        run: ls /Applications | grep Xcode
 
-      - name: Show Xcode version
+      - name: Show default Xcode version
         run: xcodebuild -version
 
       - name: Cache Ruby gems
