--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,8 +55,13 @@ jobs:
           KOPIS_API_KEY = ${{ secrets.KOPIS_API_KEY }}
           KOPIS_BASE_URL = http:/\$()/www.kopis.or.kr/openApi/restful
           EOF
+          echo "✅ Secrets.xcconfig created"
+          ls -la CurtainCall/Application/Secrets.xcconfig
         env:
           KOPIS_API_KEY: ${{ secrets.KOPIS_API_KEY }}
+
+      - name: Build project (Debug)
+        run: bundle exec fastlane build
 
       - name: Run tests with Fastlane
         run: bundle exec fastlane test
