perf: Use fixed derived_data path for reliable caching - Set derived_data_path in all Fastlane lanes - Update CI/CD cache paths to use fixed location - Add derived_data/ to .gitignore - Fix cache miss issue from random DerivedData paths

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,15 +34,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-
 
-      - name: Cache Swift Package Manager
+      - name: Cache Swift Package Manager & Build
         uses: actions/cache@v4
         with:
           path: |
             ~/Library/Caches/org.swift.swiftpm
-            ~/Library/Developer/Xcode/DerivedData/**/SourcePackages
-          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
+            derived_data
+          key: ${{ runner.os }}-xcode-${{ hashFiles('**/Package.resolved', 'CurtainCall.xcodeproj/project.pbxproj') }}
           restore-keys: |
-            ${{ runner.os }}-spm-
+            ${{ runner.os }}-xcode-
 
       - name: Install Ruby dependencies
         run: |
