--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Show available Xcode versions
-        run: ls /Applications | grep Xcode
-
-      - name: Show default Xcode version
-        run: xcodebuild -version
-
       - name: Cache Ruby gems
         uses: actions/cache@v4
         with:
@@ -55,16 +49,15 @@ jobs:
           KOPIS_API_KEY = ${{ secrets.KOPIS_API_KEY }}
           KOPIS_BASE_URL = http:/\$()/www.kopis.or.kr/openApi/restful
           EOF
-          echo "✅ Secrets.xcconfig created"
-          ls -la CurtainCall/Application/Secrets.xcconfig
         env:
           KOPIS_API_KEY: ${{ secrets.KOPIS_API_KEY }}
 
-      - name: Build project (Debug)
-        run: bundle exec fastlane build
-
       - name: Run tests with Fastlane
         run: bundle exec fastlane test
+
+      - name: Find xcresult files
+        if: always()
+        run: find . -name "*.xcresult" -type d 2>/dev/null || echo "No xcresult found"
 
       - name: Upload test results
         if: always()
@@ -72,5 +65,5 @@ jobs:
         with:
           name: test-results
           path: |
-            test_output/**/*.xcresult
+            derived_data/**/Logs/Test/*.xcresult
           retention-days: 7
