--- a/.github/workflows/deploy-testflight.yml
+++ b/.github/workflows/deploy-testflight.yml
@@ -6,6 +6,10 @@ on:
       - 'v*.*.*'
   workflow_dispatch:
     inputs:
+      version:
+        description: 'Version to deploy (e.g. 2.5.1)'
+        required: false
+        default: ''
       skip_tests:
         description: 'Skip tests before deployment'
         required: false
@@ -22,6 +26,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Cache Ruby gems
         uses: actions/cache@v4
@@ -48,10 +53,7 @@ jobs:
 
       - name: Create Secrets.xcconfig
         run: |
-          cat > CurtainCall/Application/Secrets.xcconfig << EOF
-          KOPIS_API_KEY = ${{ secrets.KOPIS_API_KEY }}
-          KOPIS_BASE_URL = http:/\$()/www.kopis.or.kr/openApi/restful
-          EOF
+          printf 'KOPIS_API_KEY = %s\nKOPIS_BASE_URL = http:/$()/www.kopis.or.kr/openApi/restful\n' "$KOPIS_API_KEY" > CurtainCall/Application/Secrets.xcconfig
         env:
           KOPIS_API_KEY: ${{ secrets.KOPIS_API_KEY }}
 
@@ -59,6 +61,7 @@ jobs:
         run: |
           echo "${{ secrets.APPLE_CERTIFICATE_P12 }}" | base64 --decode > certificate.p12
           echo "${{ secrets.PROVISIONING_PROFILE }}" | base64 --decode > profile.mobileprovision
+          echo "${{ secrets.APP_STORE_CONNECT_API_KEY }}" | base64 --decode > api_key.p8
 
       - name: Run tests
         if: github.event.inputs.skip_tests != 'true'
@@ -70,8 +73,8 @@ jobs:
           ITC_TEAM_ID: ${{ secrets.ITC_TEAM_ID }}
           APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
           APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
-          APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY }}
-          GITHUB_REF_NAME: ${{ github.ref_name }}
+          APP_STORE_CONNECT_API_KEY_PATH: ${{ github.workspace }}/api_key.p8
+          GITHUB_REF_NAME: ${{ github.event.inputs.version || github.ref_name }}
           P12_PATH: ${{ github.workspace }}/certificate.p12
           P12_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
           PROFILE_PATH: ${{ github.workspace }}/profile.mobileprovision
