--- a/.github/workflows/deploy-testflight.yml
+++ b/.github/workflows/deploy-testflight.yml
@@ -20,6 +20,9 @@ jobs:
     name: Build and Deploy to TestFlight
     runs-on: macos-latest
     timeout-minutes: 60
+    env:
+      FASTLANE_XCODEBUILD_SETTINGS_TIMEOUT: 60
+      FASTLANE_XCODEBUILD_SETTINGS_RETRIES: 3
 
     steps:
       - name: Checkout code
