--- a/.github/workflows/deploy-testflight.yml
+++ b/.github/workflows/deploy-testflight.yml
@@ -64,6 +64,7 @@ jobs:
         run: |
           echo "${{ secrets.APPLE_CERTIFICATE_P12 }}" | base64 --decode > certificate.p12
           echo "${{ secrets.PROVISIONING_PROFILE }}" | base64 --decode > profile.mobileprovision
+          echo "${{ secrets.PROVISIONING_PROFILE_WIDGET }}" | base64 --decode > profile_widget.mobileprovision
 
       - name: Run tests
         if: github.event.inputs.skip_tests != 'true'
@@ -80,6 +81,7 @@ jobs:
           P12_PATH: ${{ github.workspace }}/certificate.p12
           P12_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
           PROFILE_PATH: ${{ github.workspace }}/profile.mobileprovision
+          PROFILE_WIDGET_PATH: ${{ github.workspace }}/profile_widget.mobileprovision
         run: |
           bundle exec fastlane beta
 
