--- a/.github/workflows/deploy-testflight.yml
+++ b/.github/workflows/deploy-testflight.yml
@@ -103,7 +103,15 @@ jobs:
           path: |
             ~/Library/Logs/gym/
             fastlane/report.xml
+            build/logs/
           retention-days: 7
+
+      - name: Show xcodebuild log on failure
+        if: failure()
+        run: |
+          echo "=== Last 200 lines of xcodebuild log ==="
+          find ~/Library/Logs/gym -name "*.log" -exec tail -200 {} \; 2>/dev/null || true
+          find build/logs -name "*.log" -exec tail -200 {} \; 2>/dev/null || true
 
       - name: Notify Success
         if: success()
