fix: 릴리즈 서명/시크릿 주입 이슈로 Home 박스오피스가 비는 문제 수정
- APIConfig에 KOPIS 설정값 검증 추가 (빈 값/미치환 `$(...)`/URL 형식 오류 감지)
- HomeViewModel 에러 스트림을 HomeViewController에 연결해 API 실패 시 토스트 노출
- fastlane에 `prepare_secrets_xcconfig` 추가해 CI/로컬 시크릿 파일 생성·검증 일원화
- GitHub Actions에서 잘못된 `KOPIS_BASE_URL` 하드코딩 생성 step 제거 후 env 주입으로 변경

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,13 +46,10 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
 
-      - name: Create Secrets.xcconfig
-        run: |
-          printf 'KOPIS_API_KEY = %s\nKOPIS_BASE_URL = http:/$()/www.kopis.or.kr/openApi/restful\n' "$KOPIS_API_KEY" > CurtainCall/Application/Secrets.xcconfig
+      - name: Run tests with Fastlane
         env:
           KOPIS_API_KEY: ${{ secrets.KOPIS_API_KEY }}
-
-      - name: Run tests with Fastlane
+          KOPIS_BASE_URL: https://www.kopis.or.kr/openApi/restful/
         run: bundle exec fastlane test
 
       - name: Upload test results
