ci: KOPIS 시크릿 주입 검증 추가 및 테스트 안정성 개선
- Fastlane verify_secrets lane 추가 및 Secrets.xcconfig 값 검증
- CI/TestFlight 워크플로우에 시크릿 검증 단계 추가
- KOPIS_BASE_URL xcconfig 이스케이프 처리로 URL 파싱 오류 방지
- 테스트 실행 시 SceneDelegate 초기화 부작용 차단
- Crashlytics Run Script 출력 경로 추가로 매 빌드 실행 경고 해소

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,12 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
 
+      - name: Verify KOPIS secrets injection
+        env:
+          KOPIS_API_KEY: ${{ secrets.KOPIS_API_KEY }}
+          KOPIS_BASE_URL: https://www.kopis.or.kr/openApi/restful/
+        run: bundle exec fastlane verify_secrets
+
       - name: Run tests with Fastlane
         env:
           KOPIS_API_KEY: ${{ secrets.KOPIS_API_KEY }}
