--- a/.github/workflows/deploy-testflight.yml
+++ b/.github/workflows/deploy-testflight.yml
@@ -60,6 +60,12 @@ jobs:
           echo "${{ secrets.PROVISIONING_PROFILE }}" | base64 --decode > profile.mobileprovision
           echo "${{ secrets.PROVISIONING_PROFILE_WIDGET }}" | base64 --decode > profile_widget.mobileprovision
 
+      - name: Verify KOPIS secrets injection
+        env:
+          KOPIS_API_KEY: ${{ secrets.KOPIS_API_KEY }}
+          KOPIS_BASE_URL: https://www.kopis.or.kr/openApi/restful/
+        run: bundle exec fastlane verify_secrets
+
       - name: Run tests
         if: github.event.inputs.skip_tests != 'true'
         env:
