ci: Xcode 모듈 캐시 충돌 방지를 위한 캐시 전략 개선
- CI/TestFlight 워크플로우에서 derived_data 캐시 제거
- SwiftPM 캐시 키에 Xcode 버전 포함해 SDK 변경 시 캐시 분리
- fastlane test 실행 전 ModuleCache.noindex 정리 단계 추가
- SDK mtime 불일치로 인한 SwiftEmitModule 실패 재발 방지

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Resolve Xcode version
+        id: xcode-version
+        run: |
+          XCODE_VERSION=$(xcodebuild -version | tr '\n' ' ' | sed 's/[[:space:]]\+/-/g')
+          echo "value=${XCODE_VERSION}" >> "$GITHUB_OUTPUT"
+
       - name: Cache Ruby gems
         uses: actions/cache@v4
         with:
@@ -31,15 +37,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-
 
-      - name: Cache Swift Package Manager & Build
+      - name: Cache Swift Package Manager
         uses: actions/cache@v4
         with:
-          path: |
-            ~/Library/Caches/org.swift.swiftpm
-            derived_data
-          key: ${{ runner.os }}-xcode-${{ hashFiles('**/Package.resolved', 'CurtainCall.xcodeproj/project.pbxproj') }}
+          path: ~/Library/Caches/org.swift.swiftpm
+          key: ${{ runner.os }}-spm-${{ steps.xcode-version.outputs.value }}-${{ hashFiles('**/Package.resolved') }}
           restore-keys: |
-            ${{ runner.os }}-xcode-
+            ${{ runner.os }}-spm-${{ steps.xcode-version.outputs.value }}-
 
       - name: Install Ruby dependencies
         run: |
